Fixed images not showing after upload and static files

--- a/frontend/src/main/resources/templates/fragment/menu.html
+++ b/frontend/src/main/resources/templates/fragment/menu.html
@@ -23,7 +23,7 @@
 
                 <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
 
-                    <img class="pic-sm" th:src="@{'/images/profile/' + 'profile1.png'}" alt="profile-image">
+                    <img class="pic-sm" th:src="@{'/static/images/profile/' + 'profile1.png'}" alt="profile-image">
 
                     <li><a href="#">Tweet</a></li>
                 </ul>
