--- a/frontend/src/main/resources/templates/home.html
+++ b/frontend/src/main/resources/templates/home.html
@@ -13,13 +13,13 @@
                 <div class="col-3">
                     <!------------ PROFILE BOX ------------->
                     <div class="profile-box">
-                        <img th:src="@{'/static/images/profile/' + 'profile1.png'}" class="profile-box-pic">
+                        <img th:src="@{'/static/images/profile/' + ${profile.profileImageName} }" class="profile-box-pic">
                         <div class="profile-box-top-box"></div>
 
                         <div class="profile-box-bottom-box">
                             <div class="name-box">
-                                <span class="profile-name">Adem Salih</span><br>
-                                <span class="handle-name">@ademsalih</span>
+                                <span class="profile-name" th:text="${profile.firstName} + ' ' + ${profile.lastName}"></span><br>
+                                <span class="handle-name" th:text=" '@' + ${profile.userName}"></span>
                             </div>
                             <table class="follow-stat-table">
                                 <thead>
@@ -75,8 +75,13 @@
 
                                 <div class="tweetbox-content">
                                     <div class="name-field">
-                                        <span class="name" th:text="${t.firstName} + ' ' + ${t.lastName}"></span>
-                                        <span class="grey-text" th:text="' @' + ${t.userName}"></span>
+
+                                        <a th:href="@{'/profile/' + ${t.user_id} }">
+                                            <span class="name" th:text="${t.firstName} + ' ' + ${t.lastName}"></span>
+                                            <span class="grey-text" th:text="' @' + ${t.userName}"></span>
+                                        </a>
+
+
                                         <span class="grey-text">⋅</span>
                                         <span class="grey-text" th:text="${t.dateTime}"></span>
                                         <br>
@@ -142,8 +147,10 @@
                             <div class="tweetbox">
 
                                 <div class="retweet-box">
-                                    <img class="user-retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
-                                    <span class="retweeted-text" th:text="${t.firstName} + ' ' + ${t.lastName} + ' Retweeted' "></span>
+                                    <a th:href="@{'/profile/' + ${t.user_id} }">
+                                        <img class="user-retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
+                                        <span class="retweeted-text" th:text="${t.firstName} + ' ' + ${t.lastName} + ' Retweeted' "></span>
+                                    </a>
                                 </div>
 
                                 <div class="tweetbox-image-box">
@@ -152,8 +159,10 @@
 
                                 <div class="tweetbox-content">
                                     <div class="name-field">
-                                        <span class="name" th:text="${t.newTweet.firstName} + ' ' + ${t.newTweet.lastName}"></span>
-                                        <span class="grey-text" th:text="' @' + ${t.newTweet.userName}"></span>
+                                        <a th:href="@{'/profile/' + ${t.newTweet.user_id} }">
+                                            <span class="name" th:text="${t.newTweet.firstName} + ' ' + ${t.newTweet.lastName}"></span>
+                                            <span class="grey-text" th:text="' @' + ${t.newTweet.userName}"></span>
+                                        </a>
                                         <span class="grey-text">⋅</span>
                                         <span class="grey-text" th:text="${t.newTweet.dateTime}"></span>
                                         <br>
